Adding procfile for heroku and added start script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "NodeBattleship",
   "version": "0.0.1",
+  "appScripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "description": "Multiplayer Battleship with NodeJS and Socket.io",
   "author": {
     "name": "Christian Nilsson"
