--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
   "test": "jest",
   "coverage": "jest --coverage",
-  "start": "node index.js"
+  "start": "node server.js"
 },
 "jest": {
   "collectCoverage": true,
