--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -13,6 +13,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.14 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "YOUR APP's NAME" #Must be unique in Heroku
-          heroku_email: "YOUR EMAIL"
-#need to edit
+          heroku_app_name: "nodebattleship" #Must be unique in Heroku
+          heroku_email: "rb00030@mix.wvu.edu"
