--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -47,4 +47,4 @@ jobs:
           # Using a tag name
           tag: ${{ steps.autotagger.outputs.tagname }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} #What the hell is happening
