--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "devDependencies": {
     "cypress": "^12.14.0",
     "cypress-iframe": "^1.0.1",
+    "cypress-mochawesome-reporter": "*",
     "eslint": "^8.43.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
