--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,14 +33,14 @@ jobs:
           SLACK_TITLE: Play through Test Results
           SLACK_USERNAME: NotifyBot
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-      -  name: Push to staging
+      -  name: Push to Staging
          if: success() # This will only run if all previous steps were successful
          run: |
           git checkout Development
           git pull
-          git checkout staging
+          git checkout Staging
           git merge Development
-          git push origin staging    
+          git push origin Staging
       - name: Set directory permissions
         run: chmod -R +rwx cypress/results
       
