--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,13 @@ jobs:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
       -  name: Push to Staging
          if: success() # This will only run if all previous steps were successful
-         run: |
+      - name: Set Git config
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "Github Actions"
+         
+      - name: Merge to staging
+        run: |
           git fetch --unshallow
           git checkout Staging
           git pull
