--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
           git fetch --unshallow
           git checkout Staging
           git pull
-          git merge --no-ff Development
+          git merge -X theirs Development
           git push
       - name: Set directory permissions
         run: chmod -R +rwx cypress/results
