--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
       -  name: Push to Staging
          if: success() # This will only run if all previous steps were successful
          run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "Github Actions"
+          git config --local user.email "drminger98@gmail.com"
+          git config --local user.name "dming98"
          
       - name: Merge to staging
         run: |
